k8s/manifests/defakto/spirl-system-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: spirl-system
  labels:
    pod-security.kubernetes.io/enforce: privileged
